--- a/index.html
+++ b/index.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section class="container">
+      <!--타이틀, 메뉴-->
+      <section>
+        <div class="head-line">JH TIMES</div>
+        <div class="menu-area">
+          <button>Sport</button>
+          <button>Tech</button>
+          <button>World</button>
+          <button>Finance</button>
+          <button>Politics</button>
+          <button>Business</button>
+          <button>Entertainment</button>
+          <button>Beauty</button>
+          <button>Travel</button>
+          <button>Music</button>
+          <button>Food</button>
+          <button>Science</button>
+          <button>Gaming</button>
+          <button>Energy</button>
+        </div>
+      </section>
+      <!--뉴스보드-->
+      <section id="news-board">
+        <div class="row news">
+          <div class="col-lg-4">
+            <img class="news-img-size" src="https://url.kr/7IOKvH" />
+          </div>
+          <div class="col-lg-8">
+            <h2>하니 일본 출국!</h2>
+            <p>일본 데뷔를 위해 하니가 출국하는 현장</p>
+            <div>ytn*2024-7-7</div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!--아이콘-->
+    <script
+      src="https://kit.fontawesome.com/cbcad42a26.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--부트스트랩-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
   </body>
 </html>
