--- a/index.html
+++ b/index.html
@@ -16,7 +16,38 @@
     <section class="container">
       <!--타이틀, 메뉴-->
       <section>
+        <div class="top-menu">
+          <button class="side-bar"><i class="fas fa-bars"></i></button>
+          <button class="side-close" style="display: none">
+            <i class="fas fa-xmark"></i>
+          </button>
+          <div class="search-area">
+            <input
+              type="text"
+              class="userSearch"
+              placeholder="Enter some text"
+            />
+            <button class="searchTool"><i class="fas fa-search"></i></button>
+          </div>
+        </div>
+        <box class="side-menu">
+          <button>Sport</button>
+          <button>Tech</button>
+          <button>World</button>
+          <button>Finance</button>
+          <button>Politics</button>
+          <button>Business</button>
+          <button>Entertainment</button>
+          <button>Beauty</button>
+          <button>Travel</button>
+          <button>Music</button>
+          <button>Food</button>
+          <button>Science</button>
+          <button>Gaming</button>
+          <button>Energy</button>
+        </box>
         <div class="head-line">JH TIMES</div>
+
         <div class="menu-area">
           <button>Sport</button>
           <button>Tech</button>
@@ -48,17 +79,19 @@
         </div>
       </section>
     </section>
-    <!--아이콘-->
-    <script
-      src="https://kit.fontawesome.com/cbcad42a26.js"
-      crossorigin="anonymous"
-    ></script>
+
     <!--부트스트랩-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!--아이콘-->
+    <script
+      src="https://kit.fontawesome.com/cbcad42a26.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--모먼트-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <script src="main.js"></script>
   </body>
